@@ -23,6 +23,8 @@ Version 3.0
   created arguments instead of options.
 - Restructured Click internally to support vendoring.
 - Added support for multi command chaining.
+- Added support for defaults on options with `multiple` and
+  options and arguments with `nargs != 1`.
 
 Version 2.6
 -----------
